--- a/scss/layout/_media-635w.scss
+++ b/scss/layout/_media-635w.scss
@@ -1,13 +1,14 @@
 @media (max-width: 635px) {
+    /*REGLAS ESPECIALES INDEX - 635w*/
     .h1-index {
         font-size: 5.0rem;
     }
-
     .footer-index-d {
         display: none;
     }
-
     .footer-index-s {
         display: block;
     }
+    /*fin reglas del index - 635w*/
+
 }
