--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,8 +13,11 @@
 @import "./layout/modal";
 @import "./layout/agenda";
 @import "./layout/contacto";
-@import "./layout/media-1260w";
+@import "./layout/media-1400w";
 @import "./layout/_media-1100w";
+@import "./layout/_media-980w";
+@import "./layout/_media-945w";
+@import "./layout/_media-830w";
 @import "./layout/media-tablet";
 @import "./layout/_media-635w";
 @import "./layout/media-mobile";
