--- a/scss/layout/_media-1100w.scss
+++ b/scss/layout/_media-1100w.scss
@@ -1,16 +1,26 @@
 @media (max-width: 1100px) {
 
-
+    /*REGLAS ESPECIALES GALERIA - 1100w*/
+    .body-index {
+        background-image: url(../assets/img/desktop/foto-index.jpg);
+        background-position: center;
+    }
     .h1-index {
     width: 300px;
     line-height: 50px;
     letter-spacing: 12px;
     font-size:  8.0rem;
+    background: rgba( 255, 255, 255, 0.05 );
+    box-shadow: 0 0px 0px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 2px );
+    -webkit-backdrop-filter: blur( 2px );
+    border-radius: 10px;
+    color: $color-3;
     }
-
     .feiguin {
     letter-spacing: 15px;
     font-size:  4.4rem;
+    color: $color-3;
     }    
-    
+    /*Fin reglas especiales index 1100w*/
 }
