--- a/scss/layout/_media-1400w.scss
+++ b/scss/layout/_media-1400w.scss
@@ -1,10 +1,8 @@
-@media (max-width: 1260px) {
-     /*REGLAS ESPECIALES INDEX */
-
+@media (max-width: 1400px) {
+    /*REGLAS ESPECIALES INDEX - 1400w*/
     .body-index {
             background-image: url(../assets/img/desktop/index-2.jpg);
-        }
-    
+        } 
     .h1-index {
         grid-row: 6/11;
         grid-column: 1/3; 
@@ -13,39 +11,39 @@
         letter-spacing: 12px;
         font-size:  9.0rem;
     }
-
     .feiguin {
         letter-spacing: 14px;
         font-size:  5.4rem;
     }    
+    /*fin reglas del index - 1400w*/
 
-    /*REGLAS ESPECIALES GALERIA - TABLET*/
+    
+
+    /*REGLAS ESPECIALES GALERIA - 1400w*/
     .container-fotos { /***  G R I D S  ***/
-        grid-template-columns: repeat(3, 180px);
+        grid-template-columns: repeat(3, 310px);
         row-gap: 3px;
         column-gap: 3px;
         ;
     }
     .foto {
         padding: 3px;
-        width: 170px;
-        height: 113px;
+        width: 300px;
+        height: 200px;
     } 
-
     .foto-vert {
         padding: 3px;
-        width: 170px;
-        height: 255px;
+        width: 300px;
+        height: 450px;
     } 
-    
     .container-videos { 
-        @include flex (column, center); 
+        @include flex (row, center); 
+        flex-wrap: wrap;
         align-items: center;
     }
     .video__styling {    
         width:500px; 
     }
-    /*Fin reglas especiales galeria TABLET*/
-
+    /*Fin reglas especiales galeria 1400w*/
 
 }
