agregué fotos slide

--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,7 @@ footer {
   margin: 5px; }
 
 /*Fin reglas especiales galeria*/
-/**TEST CAROUSELLLLLL*/
+/**CAROUSEL*/
 .section-c {
   background: #F4F4F4;
   padding: 50px 0; }
@@ -589,6 +589,42 @@ footer {
     overflow: hidden;
     padding: 0;
     position: absolute; }
+    .carousel > input:nth-of-type(24):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(24):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -2300%; }
+    .carousel > input:nth-of-type(23):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(23):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -2200%; }
+    .carousel > input:nth-of-type(22):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(22):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -2100%; }
+    .carousel > input:nth-of-type(21):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(21):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -2000%; }
+    .carousel > input:nth-of-type(20):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(20):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1900%; }
+    .carousel > input:nth-of-type(19):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(19):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1800%; }
+    .carousel > input:nth-of-type(18):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(18):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1700%; }
+    .carousel > input:nth-of-type(17):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(17):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1600%; }
+    .carousel > input:nth-of-type(16):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(16):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1500%; }
+    .carousel > input:nth-of-type(15):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(15):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1400%; }
+    .carousel > input:nth-of-type(14):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(14):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1300%; }
+    .carousel > input:nth-of-type(13):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(13):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1200%; }
+    .carousel > input:nth-of-type(12):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(12):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1100%; }
+    .carousel > input:nth-of-type(11):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(11):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -1000%; }
+    .carousel > input:nth-of-type(10):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(10):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -900%; }
+    .carousel > input:nth-of-type(9):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(9):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -800%; }
+    .carousel > input:nth-of-type(8):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(8):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -700%; }
+    .carousel > input:nth-of-type(7):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(7):checked ~ .carousel__slides .carousel__slide:first-of-type {
+      margin-left: -600%; }
     .carousel > input:nth-of-type(6):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(6):checked ~ .carousel__slides .carousel__slide:first-of-type {
       margin-left: -500%; }
     .carousel > input:nth-of-type(5):checked ~ .carousel__slides .carousel__slide:first-of-type, .carousel > select:nth-of-type(5):checked ~ .carousel__slides .carousel__slide:first-of-type {
@@ -612,6 +648,42 @@ footer {
     .carousel > input:nth-of-type(5):checked ~ .carousel__thumbnails li:nth-of-type(5), .carousel > select:nth-of-type(5):checked ~ .carousel__thumbnails li:nth-of-type(5) {
       box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
     .carousel > input:nth-of-type(6):checked ~ .carousel__thumbnails li:nth-of-type(6), .carousel > select:nth-of-type(6):checked ~ .carousel__thumbnails li:nth-of-type(6) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(7):checked ~ .carousel__thumbnails li:nth-of-type(7), .carousel > select:nth-of-type(7):checked ~ .carousel__thumbnails li:nth-of-type(7) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(8):checked ~ .carousel__thumbnails li:nth-of-type(8), .carousel > select:nth-of-type(8):checked ~ .carousel__thumbnails li:nth-of-type(8) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(9):checked ~ .carousel__thumbnails li:nth-of-type(9), .carousel > select:nth-of-type(9):checked ~ .carousel__thumbnails li:nth-of-type(9) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(10):checked ~ .carousel__thumbnails li:nth-of-type(10), .carousel > select:nth-of-type(10):checked ~ .carousel__thumbnails li:nth-of-type(10) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(11):checked ~ .carousel__thumbnails li:nth-of-type(11), .carousel > select:nth-of-type(11):checked ~ .carousel__thumbnails li:nth-of-type(11) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(12):checked ~ .carousel__thumbnails li:nth-of-type(12), .carousel > select:nth-of-type(12):checked ~ .carousel__thumbnails li:nth-of-type(12) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(13):checked ~ .carousel__thumbnails li:nth-of-type(13), .carousel > select:nth-of-type(13):checked ~ .carousel__thumbnails li:nth-of-type(13) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(14):checked ~ .carousel__thumbnails li:nth-of-type(14), .carousel > select:nth-of-type(14):checked ~ .carousel__thumbnails li:nth-of-type(14) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(15):checked ~ .carousel__thumbnails li:nth-of-type(15), .carousel > select:nth-of-type(15):checked ~ .carousel__thumbnails li:nth-of-type(15) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(16):checked ~ .carousel__thumbnails li:nth-of-type(16), .carousel > select:nth-of-type(16):checked ~ .carousel__thumbnails li:nth-of-type(16) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(17):checked ~ .carousel__thumbnails li:nth-of-type(17), .carousel > select:nth-of-type(17):checked ~ .carousel__thumbnails li:nth-of-type(17) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(18):checked ~ .carousel__thumbnails li:nth-of-type(18), .carousel > select:nth-of-type(18):checked ~ .carousel__thumbnails li:nth-of-type(18) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(19):checked ~ .carousel__thumbnails li:nth-of-type(19), .carousel > select:nth-of-type(19):checked ~ .carousel__thumbnails li:nth-of-type(19) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(20):checked ~ .carousel__thumbnails li:nth-of-type(20), .carousel > select:nth-of-type(20):checked ~ .carousel__thumbnails li:nth-of-type(20) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(21):checked ~ .carousel__thumbnails li:nth-of-type(21), .carousel > select:nth-of-type(21):checked ~ .carousel__thumbnails li:nth-of-type(21) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(22):checked ~ .carousel__thumbnails li:nth-of-type(22), .carousel > select:nth-of-type(22):checked ~ .carousel__thumbnails li:nth-of-type(22) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(23):checked ~ .carousel__thumbnails li:nth-of-type(23), .carousel > select:nth-of-type(23):checked ~ .carousel__thumbnails li:nth-of-type(23) {
+      box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
+    .carousel > input:nth-of-type(24):checked ~ .carousel__thumbnails li:nth-of-type(24), .carousel > select:nth-of-type(24):checked ~ .carousel__thumbnails li:nth-of-type(24) {
       box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5); }
 
 .carousel__slides {
