--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -126,8 +126,11 @@
         column-gap: 1px;
         justify-content: center;
         justify-items: center;
-        ;
+        img:hover  { /***  T R A N S I C I O N  ***/
+            transform: scale(2.0);
+        }
     }
+
     .foto {
         width: 120px;
         height: 80px;
