--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -1,5 +1,9 @@
 /*REGLAS DEL BODY*/
 
+header {
+    margin-bottom: 30px;
+}
+
 h1 {
     text-align: center; /*titulos de las paginas centrados */
     padding-top: 30px;
