--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -126,9 +126,9 @@
         column-gap: 1px;
         justify-content: center;
         justify-items: center;
-        img:hover  { /***  T R A N S I C I O N  ***/
+        /*img:hover  {
             transform: scale(2.0);
-        }
+        }*/
     }
 
     .foto {
