--- a/scss/layout/_carousel.scss
+++ b/scss/layout/_carousel.scss
@@ -186,7 +186,7 @@
         &:focus {
             cursor: pointer;
             img {
-                box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.25);
+                box-shadow: 0px 0px 0px 1px $color-3;
                 transition: all 300ms ease-in-out;
             }
         }
