agrandé un poco las img y videos galeria mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1315,6 +1315,7 @@ textarea {
     margin-right: 10px;
     margin-left: 10px; }
   .bio-1 {
+    margin-top: 20px;
     width: 90%;
     align-self: center;
     margin-left: 0px;
@@ -1338,14 +1339,14 @@ textarea {
     .container-fotos img:hover {
       transform: scale(1.01); }
   .foto {
-    width: 250px;
-    height: 167px; }
+    width: 300px;
+    height: 200px; }
   .foto-vert {
-    width: 250px;
-    height: 375px; }
+    width: 300px;
+    height: 450px; }
   .video__styling {
-    width: 250px;
-    height: 375px; }
+    width: 300px;
+    height: 450px; }
   /*Fin reglas especiales galeria MOBILE*/
   /*REGLAS ESPECIALES AGENDA - MOBILE*/
   .contenedor-agenda {
