--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -101,6 +101,7 @@
         margin-left: 10px;
     }
     .bio-1 {
+        margin-top: 20px;
         width: 90%;
         align-self: center;
         margin-left: 0px;
@@ -134,16 +135,16 @@
     }
 
     .foto {
-        width: 250px;
-        height: 167px;
+        width: 300px;
+        height: 200px;
     } 
     .foto-vert {
-        width: 250px;
-        height: 375px;
-    }  
+        width: 300px;
+        height: 450px;
+    } 
     .video__styling {    
-        width: 250px;
-        height: 375px;
+        width: 300px;
+        height: 450px;
     }
     /*Fin reglas especiales galeria MOBILE*/
 
