--- a/css/style.css
+++ b/css/style.css
@@ -1305,7 +1305,8 @@ textarea {
     /***  F L E X B O X  ***/
     row-gap: 100px; }
   .foto-bio {
-    margin-bottom: 10px; }
+    margin-top: 20px;
+    margin-bottom: 0px; }
   .texto-bio {
     margin: 40px;
     margin-bottom: 2.0rem; }
