--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -88,7 +88,8 @@
         row-gap: 100px;
     }
     .foto-bio {
-        margin-bottom: 10px;
+        margin-top: 20px;
+        margin-bottom: 0px;
     }
     .texto-bio {
         margin: 40px;
