--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -85,8 +85,10 @@
 
     /*REGLAS ESPECIALES SOBRE MI - MOBILE*/
     .container-bio { /***  F L E X B O X  ***/
-        row-gap: 100px;
+        row-gap: 40px;
+        margin-top: 5px;
     }
+
     .foto-bio {
         margin-top: 20px;
         margin-bottom: 0px;
@@ -117,6 +119,7 @@
     .bio-3 {
         width: 90%;
     }
+
     /*fin reglas especiales sobre-mi - MOBILE */
 
 
